--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,7 +1,8 @@
 /* Small Screen */
 @media (max-width: 768px) {
-    .navbar .navbar-brand {
-        margin: 5px 0 !important;
+    .navbar .navbar-brand img {
+        width: 40px !important;
+        height: 40px !important;
     }
 }
 
@@ -9,23 +10,68 @@
 @media (max-width: 991px) 
 {
     /* Header */
-    p, .btn {font-size: 14px;}
+    p,
+    .btn {font-size: 14px;}
+
     .header,
-    .navbar,
     .navbar a {
-        padding-top: 0 !important;
+        padding: 0 !important;
+    }
+
+    .navbar {
+        padding: 10px 0 !important;
+    }
+
+    .navbar .navbar-nav {
+        background-color: #fff;
+        border-radius: 7px;
+        padding: 15px 0;
+        box-shadow: 0 0 5px #ccc;
+       
+    }
+
+    .navbar .nav-item,
+    .navbar .active {
+        border-radius: 20px;
+        font-size: 14px;
+        width: 25%;
+        margin: 6px auto;
+        text-align: center;
+        color: #37aec3 !important;
+        transition: all 0.3s;
+    }
+
+    .navbar .nav-item:hover,
+    .navbar .active {
+        background-color: #37aec3;
+        border-radius: 20px;
+      }
+
+    .navbar .active .nav-link  {color: #fff !important;}
+
+    .navbar .nav-link {
+        color: #37aec3;
+    }
+
+    .navbar .nav-link:hover {
+        color: #fff !important;
+    }
+
+    .navbar .nav-link:hover,
+    .navbar .home {
+        border-bottom: none;
     }
 
     .navbar .navbar-toggler {
-        display: none;
+        border-color: #fff;
     }
 
-    .navbar .navbar-brand {
-        margin: 20px 0;
+    .navbar .navbar-toggler-icon {
+        background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='30' height='30' viewBox='0 0 30 30'%3e%3cpath stroke='white' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
     }
 
-    .header {
-        background-image: url(../images/wave.svg);
+    .header::before {
+        background-image: url(../images/wave-sm.svg);
     }
 
     .header .header-info {padding: 15px 0;}
@@ -54,11 +100,6 @@
     }
 
     /* Subscribe */
-    .subscribe {
-        margin: 2rem 0 !important;
-        padding: 0 !important;
-    }
-
     .subscribe .subscribe-container {flex-direction: column!important;}
 
     .subscribe .subscribe-info,
@@ -68,7 +109,7 @@
 
     .subscribe input {width: 90% !important;}
 
-    .subscribe .subscribe-img img {width: 50% !important;}
+    .subscribe .subscribe-img img {width: 50% !important; margin-left: 0 !important;}
 
     .subscribe .subscribe-container div:last-child {order: -1;}
 }
